--- a/index.html
+++ b/index.html
@@ -249,7 +249,10 @@
 
         <div class="footer">
           <small
-            >Made in Texas by
+            ><a href="https://github.com/MMLaw95/first-wx-page" id="mailColor"
+              >Open-source code</a
+            >
+            Made in Texas by
             <a href="mailto:mlawry95@gmail.com" id="mailColor"
               >M.M. Lawry</a
             ></small
