--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="row justify-content-end">
           <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush d-inline-flex p-0">
+            <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Sun
               </li>
@@ -133,7 +133,7 @@
           </div>
 
           <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush d-inline-flex p-0">
+            <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Mon
               </li>
@@ -152,7 +152,7 @@
           </div>
 
           <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush d-inline-flex p-0">
+            <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Tue
               </li>
@@ -171,7 +171,7 @@
           </div>
 
           <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush d-inline-flex p-0">
+            <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Wed
               </li>
@@ -190,7 +190,7 @@
           </div>
 
           <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush d-inline-flex p-0">
+            <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Thu
               </li>
@@ -209,7 +209,7 @@
           </div>
 
           <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush d-inline-flex p-0">
+            <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Fri
               </li>
@@ -228,7 +228,7 @@
           </div>
 
           <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush d-inline-flex p-0">
+            <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Sat
               </li>
