Added forecast html and css

--- a/index.html
+++ b/index.html
@@ -117,25 +117,31 @@
                   />
             </div>
                   
-
+      <div class="weather-forcast">    
         <div class="row justify-content-end">
-          <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush p-0">
-              <li class="list-group-item" style="border: none" id="day-week">
+          <div class="col-sm-1" id="group-days">            
+            <div class="weather-forecast-date">
+              <ul class="list-group list-group-flush p-0">    
+                <li class="list-group-item" style="border: none" id="day-week">
                 Sun
-              </li>
-              <li class="list-group-item" style="border: none" id="emoji-week">
+                </li>
+                </div>
+                <li class="list-group-item" style="border: none" id="emoji-week">
                 <i class="fa-solid fa-sun wx-icon"></i>
-              </li>
-              <li
+                </li>
+            <div class="weather-forecast-temp">
+                <li
                 class="list-group-item"
                 style="border: none"
                 id="high-low-week">
-                <span class="highs" id="high-weekday"></span>°
-                <span id="low-weekday"></span>°
-              </li>
-            </ul>
-          </div>
+                <span class="highs" id="high-weekday"></span>95°
+                <span id="low-weekday"></span>84°
+                </li>
+              </ul>
+          </div>            
+        </div>
+      </div>
+    
 
           <div class="col-sm-1" id="group-days">
             <ul class="list-group list-group-flush p-0">
