Remove old forecast structure html js

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
     
 
-          <div class="col-sm-1" id="group-days">
+          <!-- <div class="col-sm-1" id="group-days">
             <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Mon
@@ -159,98 +159,151 @@
                 <span id="low-weekday"></span>°
               </li>
             </ul>
-          </div>
+          </div> -->
 
-          <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush p-0">
-              <li class="list-group-item" style="border: none" id="day-week">
-                Tue
-              </li>
-              <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-cloud-bolt wx-icon"></i>
-              </li>
-              <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>°
-                <span id="low-weekday"></span>°
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush p-0">
-              <li class="list-group-item" style="border: none" id="day-week">
-                Wed
-              </li>
-              <li class="list-group-item" style="border: none" id="emoji-week">
+          <div class="weather-forcast">    
+          <div class="col-sm-1" id="group-days">            
+            <div class="weather-forecast-date">
+              <ul class="list-group list-group-flush p-0">    
+                <li class="list-group-item" style="border: none" id="day-week">
+                Mon
+                </li>
+                </div>
+                <li class="list-group-item" style="border: none" id="emoji-week">
                 <i class="fa-solid fa-sun wx-icon"></i>
-              </li>
-              <li
+                </li>
+            <div class="weather-forecast-temp">
+                <li
                 class="list-group-item"
                 style="border: none"
                 id="high-low-week">
-                <span class="highs" id="high-weekday"></span>°
-                <span id="low-weekday"></span>°
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush p-0">
-              <li class="list-group-item" style="border: none" id="day-week">
-                Thu
-              </li>
-              <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-tornado wx-icon"></i>
-              </li>
-              <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>°
-                <span id="low-weekday"></span>°
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush p-0">
-              <li class="list-group-item" style="border: none" id="day-week">
-                Fri
-              </li>
-              <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-cloud-sun wx-icon"></i>
-              </li>
-              <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>°
-                <span id="low-weekday"></span>°
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush p-0">
-              <li class="list-group-item" style="border: none" id="day-week">
-                Sat
-              </li>
-              <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-cloud-sun wx-icon"></i>
-              </li>
-              <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>°
-                <span id="low-weekday"></span>°
-              </li>
-            </ul>
-          </div>
+                <span class="highs" id="high-weekday"></span>95°
+                <span id="low-weekday"></span>84°
+                </li>
+              </ul>
+          </div>            
         </div>
+      </div>
+
+          <div class="weather-forcast">    
+          <div class="col-sm-1" id="group-days">            
+            <div class="weather-forecast-date">
+              <ul class="list-group list-group-flush p-0">    
+                <li class="list-group-item" style="border: none" id="day-week">
+                Tue
+                </li>
+                </div>
+                <li class="list-group-item" style="border: none" id="emoji-week">
+                <i class="fa-solid fa-sun wx-icon"></i>
+                </li>
+            <div class="weather-forecast-temp">
+                <li
+                class="list-group-item"
+                style="border: none"
+                id="high-low-week">
+                <span class="highs" id="high-weekday"></span>95°
+                <span id="low-weekday"></span>84°
+                </li>
+              </ul>
+          </div>            
+        </div>
+      </div>
+
+          <div class="weather-forcast">    
+          <div class="col-sm-1" id="group-days">            
+            <div class="weather-forecast-date">
+              <ul class="list-group list-group-flush p-0">    
+                <li class="list-group-item" style="border: none" id="day-week">
+                Wed
+                </li>
+                </div>
+                <li class="list-group-item" style="border: none" id="emoji-week">
+                <i class="fa-solid fa-sun wx-icon"></i>
+                </li>
+            <div class="weather-forecast-temp">
+                <li
+                class="list-group-item"
+                style="border: none"
+                id="high-low-week">
+                <span class="highs" id="high-weekday"></span>95°
+                <span id="low-weekday"></span>84°
+                </li>
+              </ul>
+          </div>            
+        </div>
+      </div>
+
+          <div class="weather-forcast">    
+          <div class="col-sm-1" id="group-days">            
+            <div class="weather-forecast-date">
+              <ul class="list-group list-group-flush p-0">    
+                <li class="list-group-item" style="border: none" id="day-week">
+                Thu
+                </li>
+                </div>
+                <li class="list-group-item" style="border: none" id="emoji-week">
+                <i class="fa-solid fa-sun wx-icon"></i>
+                </li>
+            <div class="weather-forecast-temp">
+                <li
+                class="list-group-item"
+                style="border: none"
+                id="high-low-week">
+                <span class="highs" id="high-weekday"></span>95°
+                <span id="low-weekday"></span>84°
+                </li>
+              </ul>
+          </div>            
+        </div>
+      </div>
+
+          <div class="weather-forcast">    
+          <div class="col-sm-1" id="group-days">            
+            <div class="weather-forecast-date">
+              <ul class="list-group list-group-flush p-0">    
+                <li class="list-group-item" style="border: none" id="day-week">
+                Fri
+                </li>
+                </div>
+                <li class="list-group-item" style="border: none" id="emoji-week">
+                <i class="fa-solid fa-sun wx-icon"></i>
+                </li>
+            <div class="weather-forecast-temp">
+                <li
+                class="list-group-item"
+                style="border: none"
+                id="high-low-week">
+                <span class="highs" id="high-weekday"></span>95°
+                <span id="low-weekday"></span>84°
+                </li>
+              </ul>
+          </div>            
+        </div>
+      </div>
+
+      <div class="weather-forcast">    
+          <div class="col-sm-1" id="group-days">            
+            <div class="weather-forecast-date">
+              <ul class="list-group list-group-flush p-0">    
+                <li class="list-group-item" style="border: none" id="day-week">
+                Sat
+                </li>
+                </div>
+                <li class="list-group-item" style="border: none" id="emoji-week">
+                <i class="fa-solid fa-sun wx-icon"></i>
+                </li>
+            <div class="weather-forecast-temp">
+                <li
+                class="list-group-item"
+                style="border: none"
+                id="high-low-week">
+                <span class="highs" id="high-weekday"></span>95°
+                <span id="low-weekday"></span>84°
+                </li>
+              </ul>
+          </div>            
+        </div>
+      </div>
 
         <div class="footer">
           <small
