--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </ul>
           </div>            
         </div>
-      </div>
+      <!-- </div> -->
     
 
           <!-- <div class="col-sm-1" id="group-days">
@@ -304,6 +304,7 @@
           </div>            
         </div>
       </div>
+        </div>
 
         <div class="footer">
           <small
