--- a/index.html
+++ b/index.html
@@ -117,15 +117,14 @@
                   />
             </div>
                   
-      <div class="weather-forcast">    
+      <!-- <div class="weather-forcast" id="forecast">    
         <div class="row justify-content-end">
           <div class="col-sm-1" id="group-days">            
-            <div class="weather-forecast-date">
+            <div class="weather-forecast-day">
               <ul class="list-group list-group-flush p-0">    
                 <li class="list-group-item" style="border: none" id="day-week">
                 Sun
-                </li>
-                </div>
+                </li></div>
                 <li class="list-group-item" style="border: none" id="emoji-week">
                 <i class="fa-solid fa-sun wx-icon"></i>
                 </li>
@@ -139,7 +138,7 @@
                 </li>
               </ul>
           </div>            
-        </div>
+        </div> -->
       <!-- </div> -->
     
 
@@ -161,7 +160,7 @@
             </ul>
           </div> -->
 
-          <div class="weather-forcast">    
+          <!-- <div class="weather-forcast">    
           <div class="col-sm-1" id="group-days">            
             <div class="weather-forecast-date">
               <ul class="list-group list-group-flush p-0">    
@@ -304,7 +303,7 @@
           </div>            
         </div>
       </div>
-        </div>
+        </div> -->
 
         <div class="footer">
           <small
