debugging and refactoring js template/css/html

--- a/index.html
+++ b/index.html
@@ -84,15 +84,9 @@
                     <li>
                       <span id="current-day-date-time"></span>
                     </li>
-                    <li>
-                      Feels Like: <span id="feels-like-temp"></span>°
-                    </li>
-                    <li>
-                      Humidity: <span id="humidity"></span>%
-                    </li>
-                    <li>
-                      Wind: <span id="wind-speed"></span> mph
-                    </li>
+                    <li>Feels Like: <span id="feels-like-temp"></span>°</li>
+                    <li>Humidity: <span id="humidity"></span>%</li>
+                    <li>Wind: <span id="wind-speed"></span> mph</li>
                     <li>
                       <span id="weather-description"></span>
                     </li>
@@ -108,16 +102,19 @@
           </div>
 
           <div class="col-sm-4">
-                  <img
-                    src=""
-                    alt="Clear"
-                    id="current-emoji"
-                    class="float-left"
-                    width="300"
-                  />
-            </div>
-                  
-      <!-- <div class="weather-forcast" id="forecast">    
+            <img
+              src=""
+              alt="Clear"
+              id="current-emoji"
+              class="float-left"
+              width="300"
+            />
+          </div>
+
+          <div class="weather-forecast" id="forecast"></div>
+        </div>
+
+        <!-- <div class="weather-forcast" id="forecast">    
         <div class="row justify-content-end">
           <div class="col-sm-1" id="group-days">            
             <div class="weather-forecast-day">
@@ -139,10 +136,9 @@
               </ul>
           </div>            
         </div> -->
-      <!-- </div> -->
-    
+        <!-- </div> -->
 
-          <!-- <div class="col-sm-1" id="group-days">
+        <!-- <div class="col-sm-1" id="group-days">
             <ul class="list-group list-group-flush p-0">
               <li class="list-group-item" style="border: none" id="day-week">
                 Mon
@@ -160,7 +156,7 @@
             </ul>
           </div> -->
 
-          <!-- <div class="weather-forcast">    
+        <!-- <div class="weather-forcast">    
           <div class="col-sm-1" id="group-days">            
             <div class="weather-forecast-date">
               <ul class="list-group list-group-flush p-0">    
@@ -311,9 +307,8 @@
               >Open-source code</a
             >
             Made in Texas by
-            <a href="mailto:mlawry95@gmail.com" id="mailColor"
-              >M.M. Lawry</a>
-            </small>
+            <a href="mailto:mlawry95@gmail.com" id="mailColor">M.M. Lawry</a>
+          </small>
         </div>
       </div>
     </div>
