Refactor then make page smaller

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <form class="float-left" id="search-form-input">
             <input
               type="search"
-              placeholder="Search any city in the world..."
+              placeholder="Find any city in the world..."
               autofocus="on"
               autocomplete="off"
               class="form-control shadow-sm"
@@ -107,209 +107,22 @@
               alt="Clear"
               id="current-emoji"
               class="float-left"
-              width="300"
+              width="220"
             />
           </div>
-
-          <div class="weather-forecast" id="forecast"></div>
         </div>
 
-        <!-- <div class="weather-forcast" id="forecast">    
-        <div class="row justify-content-end">
-          <div class="col-sm-1" id="group-days">            
-            <div class="weather-forecast-day">
-              <ul class="list-group list-group-flush p-0">    
-                <li class="list-group-item" style="border: none" id="day-week">
-                Sun
-                </li></div>
-                <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-sun wx-icon"></i>
-                </li>
-            <div class="weather-forecast-temp">
-                <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>95°
-                <span id="low-weekday"></span>84°
-                </li>
-              </ul>
-          </div>            
-        </div> -->
-        <!-- </div> -->
-
-        <!-- <div class="col-sm-1" id="group-days">
-            <ul class="list-group list-group-flush p-0">
-              <li class="list-group-item" style="border: none" id="day-week">
-                Mon
-              </li>
-              <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-cloud wx-icon"></i>
-              </li>
-              <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>°
-                <span id="low-weekday"></span>°
-              </li>
-            </ul>
-          </div> -->
-
-        <!-- <div class="weather-forcast">    
-          <div class="col-sm-1" id="group-days">            
-            <div class="weather-forecast-date">
-              <ul class="list-group list-group-flush p-0">    
-                <li class="list-group-item" style="border: none" id="day-week">
-                Mon
-                </li>
-                </div>
-                <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-sun wx-icon"></i>
-                </li>
-            <div class="weather-forecast-temp">
-                <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>95°
-                <span id="low-weekday"></span>84°
-                </li>
-              </ul>
-          </div>            
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </div>
 
-          <div class="weather-forcast">    
-          <div class="col-sm-1" id="group-days">            
-            <div class="weather-forecast-date">
-              <ul class="list-group list-group-flush p-0">    
-                <li class="list-group-item" style="border: none" id="day-week">
-                Tue
-                </li>
-                </div>
-                <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-sun wx-icon"></i>
-                </li>
-            <div class="weather-forecast-temp">
-                <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>95°
-                <span id="low-weekday"></span>84°
-                </li>
-              </ul>
-          </div>            
-        </div>
-      </div>
-
-          <div class="weather-forcast">    
-          <div class="col-sm-1" id="group-days">            
-            <div class="weather-forecast-date">
-              <ul class="list-group list-group-flush p-0">    
-                <li class="list-group-item" style="border: none" id="day-week">
-                Wed
-                </li>
-                </div>
-                <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-sun wx-icon"></i>
-                </li>
-            <div class="weather-forecast-temp">
-                <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>95°
-                <span id="low-weekday"></span>84°
-                </li>
-              </ul>
-          </div>            
-        </div>
-      </div>
-
-          <div class="weather-forcast">    
-          <div class="col-sm-1" id="group-days">            
-            <div class="weather-forecast-date">
-              <ul class="list-group list-group-flush p-0">    
-                <li class="list-group-item" style="border: none" id="day-week">
-                Thu
-                </li>
-                </div>
-                <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-sun wx-icon"></i>
-                </li>
-            <div class="weather-forecast-temp">
-                <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>95°
-                <span id="low-weekday"></span>84°
-                </li>
-              </ul>
-          </div>            
-        </div>
-      </div>
-
-          <div class="weather-forcast">    
-          <div class="col-sm-1" id="group-days">            
-            <div class="weather-forecast-date">
-              <ul class="list-group list-group-flush p-0">    
-                <li class="list-group-item" style="border: none" id="day-week">
-                Fri
-                </li>
-                </div>
-                <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-sun wx-icon"></i>
-                </li>
-            <div class="weather-forecast-temp">
-                <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>95°
-                <span id="low-weekday"></span>84°
-                </li>
-              </ul>
-          </div>            
-        </div>
-      </div>
-
-      <div class="weather-forcast">    
-          <div class="col-sm-1" id="group-days">            
-            <div class="weather-forecast-date">
-              <ul class="list-group list-group-flush p-0">    
-                <li class="list-group-item" style="border: none" id="day-week">
-                Sat
-                </li>
-                </div>
-                <li class="list-group-item" style="border: none" id="emoji-week">
-                <i class="fa-solid fa-sun wx-icon"></i>
-                </li>
-            <div class="weather-forecast-temp">
-                <li
-                class="list-group-item"
-                style="border: none"
-                id="high-low-week">
-                <span class="highs" id="high-weekday"></span>95°
-                <span id="low-weekday"></span>84°
-                </li>
-              </ul>
-          </div>            
-        </div>
-      </div>
-        </div> -->
-
-        <div class="footer">
-          <small
-            ><a href="https://github.com/MMLaw95/first-wx-page" id="mailColor"
-              >Open-source code</a
-            >
-            Made in Texas by
-            <a href="mailto:mlawry95@gmail.com" id="mailColor">M.M. Lawry</a>
-          </small>
-        </div>
+      <div class="footer">
+        <small
+          ><a href="https://github.com/MMLaw95/first-wx-page" id="mailColor"
+            >Open-source code</a
+          >
+          Made in Texas by
+          <a href="mailto:mlawry95@gmail.com" id="mailColor">M.M. Lawry</a>
+        </small>
       </div>
     </div>
 
