Added another media query and rigged footer

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           ><a href="https://github.com/MMLaw95/first-wx-page" id="mailColor"
             >Open-source code</a
           >
-          Made in Texas by
+          <span class="madeInTexas">Made in Texas by</span>
           <a href="mailto:mlawry95@gmail.com" id="mailColor">M.M. Lawry</a>
         </small>
       </div>
