--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             >Open-source code</a
           >
           <span class="madeInTexas">Made in Texas by</span>
-          <a href="mailto:mlawry95@gmail.com" id="mailColor">M.M. Lawry</a>
+          <a href="mailto:mlawry95@gmail.com" id="mailColor">M.M.L.</a>
         </small>
       </div>
     </div>
