Update github and email

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
       <div class="footer">
         <small
-          ><a href="https://github.com/MMLaw95/first-wx-page" id="mailColor"
+          ><a href="https://github.com/mml95/first-wx-page" id="mailColor"
             >Open-source code</a
           >
           <span class="madeInTexas">Made in Texas by</span>
-          <a href="mailto:mlawry95@gmail.com" id="mailColor">M.M.L.</a>
+          <a href="mailto:mml@mml95.dev" id="mailColor">M.M.L.</a>
         </small>
       </div>
     </div>
