Update M.M.L. to MML

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             >Open-source code</a
           >
           <span class="madeInTexas">Made in Texas by</span>
-          <a href="mailto:mml@mml95.dev" id="mailColor">M.M.L.</a>
+          <a href="mailto:mml@mml95.dev" id="mailColor">MML</a>
         </small>
       </div>
     </div>
