Correct github link

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <div class="footer">
         <small
-          ><a href="https://github.com/mml95/first-wx-page" id="mailColor"
+          ><a href="https://github.com/mml95/wx-app-javascript-1" id="mailColor"
             >Open-source code</a
           >
           <span class="madeInTexas">Made in Texas by</span>
